--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,10 @@
   .projects img {
     height: 100px;
   }
-  
+  .featured-image {
+    width: 300px;
+    height: 3000px;
+  }
   .contact-info {
     display: flex;
     flex-direction: column;
