--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,115 +1,130 @@
+/* Applies a border-box sizing and makes the margin and padding reset */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
- 
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Set global font styles */
+body {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/* Styles the header and navigation bar */
 .header {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #19283f;
-    display: block;
-    color: beige;
-    margin: 0;
-  }
-  
-  a {
-    font-size: 200%;
-    color: beige;
-    text-decoration: none; 
-    margin-right: 20px; 
-  }
-  
-  .navbar {
-    display: flex;
-    font-size: 50%;
-    justify-content: right;
-    padding: 10px;
-    color: beige;
-  }
-  .background {
-    height: 100vh;
-    margin: 0;
-    position: relative;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .background img {
-    max-height: 100%;
-    max-width: 100%;
-  }
-  .intro h2,
-  .projects h2,
-  .contact h2 {
-    margin-right: 2rem;
-  }
-  
-  .section {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    height: 100vh;
-  }
-  
-  .section p {
-    border-left: 2px solid black;
-    padding-left: 2rem;
-    font-size: 75%;
-  }
-  .section.intro {
-    margin-top: 10px;
-  }
-  .projects img {
-    height: 100px;
-  }
-  .featured-image {
-    width: 300px;
-    height: 3000px;
-  }
-  .contact-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .email {
-    margin-bottom: 1rem;
-  }
-  
+  background-color: #19283f;
+  color: beige;
+  padding: 1rem;
+}
+
+.navbar {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  font-size: 1.5rem;
+  color: beige;
+}
+
+.navbar a {
+  margin-right: 1rem;
+  color: beige;
+  text-decoration: none;
+}
+
+/* Styles the background image */
+.background {
+  height: 100vh;
+  position: relative;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+/* Sets the styles for each section */
+.section {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  height: 100vh;
+}
+
+.section h2 {
+  margin-right: 2rem;
+}
+
+.section p {
+  border-left: 2px solid black;
+  padding-left: 2rem;
+  font-size: 0.75em;
+}
+
+.section.intro {
+  margin-top: 10px;
+}
+
+/* Set styles for images */
+.project-image {
+  height: 100px;
+}
+
+.featured-image {
+  width: 300px;
+  height: 300px; /* updated from 3000px */
+}
+
+/* Set styles for contact me */
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.email {
+  margin-bottom: 1rem;
+}
+
+/* Responsive styles for smaller screens */
 @media only screen and (max-width: 768px) {
-    .background {
-      height: auto;
-      min-height: 100vh;
-      padding: 2rem;
-    }
-  
-    .background img {
-      height: 100px;
-      width: 100px;
-    }
-  
-    .section {
-      width: 100%;
-    }
-  
-    .about,
-    .work,
-    .contact {
-      padding: 1rem;
-    }
-  
-    .work img {
-      height: 75px;
-      margin: 0.5rem;
-      width: 100px;
-    }
-  
-    .work img:first-child {
-      height: 100px;
-      width: 150px;
-    }
+  .background {
+    height: auto;
+    min-height: 100vh;
+    padding: 2rem;
   }
+
+  .background img {
+    height: 100px;
+    width: 100px;
+  }
+
+  .section {
+    width: 100%;
+    height: auto;
+  }
+
+  .section.intro {
+    margin-top: 0;
+  }
+
+  .section p {
+    font-size: 1em;
+  }
+
+  .project-image {
+    height: 75px;
+    margin: 0.5rem;
+    width: 100px;
+  }
+
+  .project-image:first-child {
+    height: 100px;
+    width: 150px;
+  }
+}
