--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,12 +48,12 @@ body {
 
 /* Sets the styles for each section */
 .section {
-  margin: 0 auto;
+  margin: 2rem auto; /* Adjusted margin */
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 50%;
-  height: 100vh;
+  width: 80%; /* Adjusted width to 80% */
+  height: auto; /* Updated height to auto */
 }
 
 .section h2 {
@@ -73,8 +73,8 @@ body {
 /* Set styles for images */
 .project-image {
   height: 100px;
+  margin-bottom: 2rem; /* Added margin-bottom */
 }
-
 .featured-image {
   width: 300px;
   height: 300px; /* updated from 3000px */
